Adjustments Fixed the card layout, added a card to the bio, aligned cards/images/

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ div.lg-complete {
 figure {
   background: WhiteSmoke;
   padding: 1em;
-  width: 900px;
+  width: 550px;
   float: center;
   box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.25),
     -8px 4px 15px rgba(43, 30, 31, 0.12);
